--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,14 @@ body {
 .sidebar h1 {
   font-family: "Playfair Display", serif;
   font-size: 350%;
-  color: #d3d3da;
+  color: #A3FDF7;
   display: block;
   padding: 16px;
   padding-top: 0;
   margin:0;
   font-weight: 600;
   text-align: center;
+    font-style:italic;
 }
 
 .sidebar h2 {
