--- a/styles.css
+++ b/styles.css
@@ -44,12 +44,12 @@ body {
 }
 
 .content h1 {
-  font-family: "Playfair Display", serif;
+  font-family: "Book Antiqua", serif;
   color: #1D6D81;
 }
 
 .content h2 {
-  font-family: "Playfair Display", serif;
+  font-family: "Book Antiqua", serif;
 }
 
 .content p {
